--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Go
+name: ci-test
 
 on:
   push:
@@ -48,4 +48,4 @@ jobs:
       run: make migrateup
 
     - name: Test
-      run: go test -v ./...
+      run: make test
